<resources>
    <string name="app_name">MainActivity</string>
    <string name="enter_search_text">Введи имя, тег, почту…</string>
    <string name="tmp_name">Фамилия Имя</string>
    <string name="tmp_position">Я работаю</string>
    <string name="tmp_nickname">nickname</string>
    <string name="tmp_bd">дата</string>
    <string name="tmp_phone">номер телефона</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alphabet_sort">По алфавиту</string>
    <string name="birthday_sort">По дню рождения</string>
    <string name="title_sorts">Сортировка</string>
    <string name="users_not_found">Мы никого не нашли</string>
    <string name="enter_other_user">Попробуй скорректировать запрос</string>
    <string name="error_title">Какой-то сверхразум все сломал</string>
    <string name="error_subtitle">Постараемся быстро починить</string>
    <string name="error_again">Попробовать снова</string>
    <string name="all">Все</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="disign">Дизайн</string>
    <string name="management">Менеджмент</string>
    <string name="qa">QA</string>
    <string name="back_office">Бэк-офис</string>
    <string name="frontend">Frontend</string>
    <string name="hr">HR</string>
    <string name="pr">PR</string>
    <string name="backend">Backend</string>
    <string name="support">Техподдержка</string>
    <string name="analytics">Аналитика</string>
</resources>