<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/employee_photo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tmp_name"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/employee_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employee_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/tmp_position"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/employee_photo"
        app:layout_constraintTop_toBottomOf="@id/employee_name" />

    <TextView
        android:id="@+id/employee_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/tmp_nickname"
        app:layout_constraintBottom_toBottomOf="@id/employee_name"
        app:layout_constraintStart_toEndOf="@id/employee_name" />

    <TextView
        android:id="@+id/employee_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_bd"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>