<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sorts"
        android:textSize="20sp"
        android:textColor="@color/black_text"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/sortsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingBottom="40dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/alphabet_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_rb"
            android:textSize="16sp"
            android:textColor="@color/dark_grey"
            android:text="@string/alphabet_sort"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/birthday_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_rb"
            android:textSize="16sp"
            android:textColor="@color/dark_grey"
            android:text="@string/birthday_sort"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>