<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_light"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow"
            android:background="@drawable/button_grey"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_marginTop="40dp"
            android:src="@color/teal_200"
            app:civ_border_color="@color/teal_200"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp_name"
                android:textColor="@color/black_text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/tmp_nickname"
                android:textColor="@color/grey"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tmp_position"
            android:textColor="@color/dark_grey"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star"
        android:layout_marginTop="28dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_bd"
        android:textSize="16sp"
        android:textColor="@color/black_text"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toEndOf="@id/star"
        app:layout_constraintBottom_toBottomOf="@id/star"/>

    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/phone"
        android:layout_marginTop="28dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/star"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_phone"
        android:textSize="16sp"
        android:textColor="@color/black_text"
        android:clickable="true"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toEndOf="@id/ic_phone"
        app:layout_constraintBottom_toBottomOf="@id/ic_phone"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_bd"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanel"/>

</androidx.constraintlayout.widget.ConstraintLayout>